style.css
*{
    margin:0;
    padding: 0;
    box-sizing: border-box;

}

body{
    /*border: 2px solid red;*/
    min-height:100vh;
    display: flex;
    flex-direction: column;
    /*Initial Issue caused by using align-items which is required for the containers below the body which stretch out to take the full width*/
}

.header{
    border: 2px solid black;
    display: flex;
    flex-direction: column;
    background-color: #1f2937;
    
}

.header-logo{
    display: flex;
    justify-content: space-between;
    padding-top: 10px;
    padding-left: 100px;
    padding-right: 100px;  
    
    
}

.header p{
    font-size: 24px;
    font-family: Arial, Helvetica, sans-serif;
    color: white;
    font-weight: bold;
}

ul{
    list-style-type: none;
    display: flex;
    gap:15px;
    padding: 0;
    margin: 0;
    color: #F9FAF8;
    font-size: 18px;
}

.websitegreat{
    
    display: flex;
    justify-content: center;
    align-items: stretch;
    font-family: Arial, Helvetica, sans-serif;
    margin: 100px;
    gap: 30px;
    
    align-content: stretch;
    
}

.header-wording{
    font-size: 48px;
    font-weight: bolder;
    color: #f9faf8;
}

.text{
    font-size: 18px;
    font-family: Arial, Helvetica, sans-serif;
    color: #e5e7eb;/*I like aquamarine here*/
}

button{
    background-color: #3882f6;
    color: white;
    padding: 8px 24px;
    border-radius: 5px;
    border: none;
    font-weight: bold;
}

    
.place-holder{
    color: #e5e7eb;
    
    background-color: grey;
    flex:1;
    display: flex;
    justify-content: center;
   
    align-items: center;
    
    
}

.verbose-container{
    
    flex:1;
    background-color: #1f2937;
    
}

/*1st Content Box*/
.content-block-one{
    display: flex;
    flex-direction: column;
    
    
}

.random-information{
    
    display: flex;
    justify-content: center;
    font-size: 36px;
    color: #1f2937;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bolder;

    
}

.illustration-holder{
    display: flex;
   
   
    padding: 100px;
    padding-top: 50px;
    
    

}

.boxes{
    
    display: flex;
    
    align-items: center;
    flex-direction: column;
    flex: 1; 
    border: 2px solid black; 
}

.box{
    height: 150px;
    width: 150px;
    border: 2px solid #3882f6;
    border-radius: 8px;
    flex: 1 1 auto;
    
}

.boxes p{
    
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    width: 150px;
    text-align: center;
    border: 2px solid black;
    
    
    
}

